2009-04-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keybindings.c:
   Manually show the main notebook tab bar menu when Shift-F10 is
   pressed. This broke when we disabled the default GTK tab bar menu.


2009-04-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c, src/document.c, src/document.h, src/treeviews.c,
   src/utils.c, src/utils.h:
   Ellipsize tab labels and some status messages for very long
   filenames (closes #2777348).
 * src/plugins.c, src/plugindata.h, plugins/geanyfunctions.h:
   Add utils_str_middle_truncate() and
   document_get_basename_for_display() to the plugin API.
 * doc/geany.html, doc/geany.txt, src/toolbar.c:
   Add new toolbar element: Print (patch by Roland Baudin, thanks).
 * doc/geany.html, doc/geany.txt, src/document.c, src/document.h,
   src/keyfile.c:
   Add a hidden preference 'use_safe_file_saving' to save files to disk
   by creating a temporary file first. This has serious side effects,
   please read the documentation before enabling this.
 * src/build.c:
   Make build commands on Windows run synchronously to avoid problems
   with reading build commands' output.
 * doc/geany.html, doc/geany.txt, src/build.c, src/build.h:
   Limit the amount of highlighted build error messages in the
   Compiler window to 50 for performance reasons.


2009-04-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c, src/editor.c, src/keybindings.c, src/keybindings.h,
   src/prefs.c:
   Replace our own GEANY_KEYS_MODIFIER_MASK by
   gtk_accelerator_get_default_mod_mask() which gives the same result.
 * src/filetypes.c, src/symbols.c, tagmanager/Makefile.am,
   tagmanager/makefile.win32, tagmanager/parsers.h, wscript:
   Add a trivial symbol parser for NSIS files.


2009-04-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c:
   Hide the extra file open dialog options in an expander to make the
   dialog more compact by default and to provide more space for the